--- a/contact_me.html
+++ b/contact_me.html
@@ -54,6 +54,9 @@
             </ul>
         </div>
     </nav>
+    <h1>Contact Me</h1>
+    <p>If you have any questions or cool project ideas, send me an email, or check out my Github</p>
+    <p>Email: Shane.Stevens444@gmail.com</p>
 </body>
 
 </html>
