--- a/contact_me.html
+++ b/contact_me.html
@@ -55,8 +55,9 @@
         </div>
     </nav>
     <h1>Contact Me</h1>
-    <p>If you have any questions or cool project ideas, send me an email, or check out my Github</p>
+    <p>If you have any questions or cool project ideas, send me an email, or check out my Github!</p>
     <p>Email: Shane.Stevens444@gmail.com</p>
+    <p>Github: <a href = https://github.com/Shanes444>https://github.com/Shanes444</a></p>
 </body>
 
 </html>
