fixed file name bug

--- a/contact_me.html
+++ b/contact_me.html
@@ -46,7 +46,7 @@
 <body>
     <nav>
         <div class= navbar>
-            <a href="home.html"><span class= name>Shane Stevens</span></a>
+            <a href="index.html"><span class= name>Shane Stevens</span></a>
             <ul>
                 <li><a href = "about_me.html">About Me</a></li>
                 <li><a href = "projects.html">Projects</a></li>
