--- a/about_me.html
+++ b/about_me.html
@@ -53,7 +53,7 @@
 <body>
     <nav>
         <div class= navbar>
-            <a href="home.html"><span class= name>Shane Stevens</span></a>
+            <a href="index.html"><span class= name>Shane Stevens</span></a>
             <ul>
                 <li><a href = "#">About Me</a></li>
                 <li><a href = "projects.html">Projects</a></li>
