--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
 <body>
     <nav>
         <div class= navbar>
-            <a href="home.html"><span class= name>Shane Stevens</span></a>
+            <a href="index.html"><span class= name>Shane Stevens</span></a>
             <ul>
                 <li><a href = "about_me.html">About Me</a></li>
                 <li><a href = "#">Projects</a></li>
