--- a/template.html
+++ b/template.html
@@ -53,7 +53,7 @@
 <body>
     <nav>
         <div class= navbar>
-            <a href="home.html"><span class= name>Shane Stevens</span></a>
+            <a href="index.html"><span class= name>Shane Stevens</span></a>
             <ul>
                 <li><a href = "about_me.html">About Me</a></li>
                 <li><a href = "projects.html">Projects</a></li>
@@ -62,5 +62,6 @@
         </div>
     </nav>
 </body>
+
 
 </html>
