--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,7 @@
             display:flex; align-items: center; justify-content: space-between;
         }
         .name{
+            color:black;
             font-weight: 900;
             font-family:'Courier New', Courier, monospace;
             margin-left: 15px;
